--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "next": "14.2.6",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
